--- a/CSS/style.css
+++ b/CSS/style.css
@@ -255,7 +255,7 @@ body {
 .items a {
 	width: 40px;
 	height: 40px;
-	background-color: #d35400;
+	background-color: #000;
 	position: relative;
 	display: inline-block;
 	-webkit-transition: all 0.2s linear, 0.2s;
@@ -325,7 +325,7 @@ body {
 }
 
 #navigation {
-	background-color: #d35400;
+	background-color: #000;
 	padding: 20px 10px;
 	z-index: 100;
 	width: 100%;
