--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 .skillsSection, .contactSection {
-	background-color: #;
+	background-color: #d35400;
 	color: #fff;
 }
 
@@ -146,7 +146,7 @@ body {
 	font-size: 56px;
 	margin-bottom: 10px;
 	font-weight: 400;
-	color: #000;
+	color: #d35400;
 }
 
 .squareContent h3 {
@@ -176,7 +176,7 @@ body {
 }
 
 .contactButton:hover {
-	color: #000;
+	color: #d35400;
 	background-color: #fff;
 	text-decoration: none;
 }
@@ -195,8 +195,8 @@ body {
 }
 
 .filter .current {
-	background-color: #000;
-	border-color: #000;
+	background-color: #d35400;
+	border-color: #d35400;
 	color: #fff;
 }
 
@@ -255,7 +255,7 @@ body {
 .items a {
 	width: 40px;
 	height: 40px;
-	background-color: #000;
+	background-color: #d35400;
 	position: relative;
 	display: inline-block;
 	-webkit-transition: all 0.2s linear, 0.2s;
@@ -325,7 +325,7 @@ body {
 }
 
 #navigation {
-	background-color: #000;
+	background-color: #d35400;
 	padding: 20px 10px;
 	z-index: 100;
 	width: 100%;
