--- a/CSS/style.css
+++ b/CSS/style.css
@@ -407,3 +407,19 @@ body {
     margin: 0;
     color: #ddd; /* Lighter text */
 }
+
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
+}
+
+.loader .inner {
+    width: 100%;
+    height: 100%;
+    background: url(../img/loader.gif) center center no-repeat;
+}
