--- a/CSS/style.css
+++ b/CSS/style.css
@@ -421,5 +421,5 @@ body {
 .loader .inner {
     width: 100%;
     height: 100%;
-    background: url(../img/loader.gif) center center no-repeat;
+    background: url(../img/loader1.gif) center center no-repeat;
 }
